--- a/public/admin.html
+++ b/public/admin.html
@@ -1,178 +1,27 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>PANEL ADMIN</title>
-<style>
-  *{ box-sizing:border-box; }
-
-  :root{
-    --bg1:#4b0082; --bg2:#000000; --particle:#c7b3ff;
-    --card:#1c1433f0; --edge1:rgba(174,143,255,.16); --edge2:rgba(255,255,255,.55);
-    --text:#ffffff; --muted:#c9c0f2; --btn-bg:#1e1935;
-    --neonA:#b985ff; --neonB:#efe6ff; --pulse:#7f5cff;
-    --listColW:108px;   
-    --saveBtnW:160px;   
-    --cfgLabelW:110px;  
-    --cfgNumberW:60px;  
-    --cfgSuffixW:56px;  
-    --cfgGap:8px;       
-  }
-
-  html,body{
-    height:100%;margin:0;color:var(--text);
-    font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial;
-    background:radial-gradient(circle at 30% -10%,var(--bg1),var(--bg2));
-  }
-  canvas{position:fixed;inset:0;width:100%;height:100%;z-index:0}
-  .shell{position:relative;z-index:2;max-width:760px;margin:4px auto 32px;padding:0 14px}
-  .logo-wrap{display:flex;justify-content:center}
-  .logo{width:240px;display:block;filter:drop-shadow(0 6px 18px rgba(115,90,255,.35));margin:10px auto -36px;}
-
-  .card,.card-mini{
-    position:relative;z-index:1;margin:0 auto;
-    background:linear-gradient(var(--card),var(--card)) padding-box,
-               linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;
-    border:1px solid transparent;border-radius:20px;
-    box-shadow:0 12px 40px rgba(0,0,0,.45);
-  }
-  .card-inner{padding:16px 14px}
-  .mini-inner{padding:14px 14px}
-  h1{text-align:center;margin:2px 0 8px;font-size:24px;letter-spacing:.4px}
-  p,small{color:var(--muted);text-align:center;margin:0}
-  input[type=text],input[type=number]{
-    flex:1;background:#2b2250;border:1px solid rgba(180,140,255,.35);
-    border-radius:12px;padding:10px 12px;color:#fff;outline:none;
-  }
-  input::placeholder{color:#9a8ccc}
-
-  /* Botones */
-  .btn{
-    border:none;border-radius:12px;padding:10px 12px;
-    color:#fff;cursor:pointer;outline:none;background:var(--btn-bg);
-    font-weight:600;text-align:center;display:flex;align-items:center;justify-content:center;
-    height:36px;font-size:12.5px;
-    box-shadow:0 6px 18px rgba(40,0,120,.22);
-  }
-  .btn:hover{filter:brightness(1.08)}
-  .btn--sm{ height:34px; padding:8px 10px; font-size:12px; }
-  .btn--main{
-    font-size:15px; padding:12px 16px; min-width:220px; background:#231a44;
-    box-shadow:0 10px 28px rgba(127,92,255,.35), 0 0 22px rgba(127,92,255,.22);
-  }
-
-  /* Top botones */
-  .actions-top{
-    display:grid;grid-template-columns:1fr 1fr 1fr;gap:8px;margin:8px 0 6px;
-  }
-  .actions-bottom{display:flex;justify-content:center;margin:18px 0 6px;}
-  #list{margin-top:24px;}
-  .item{
-    display:grid;
-    grid-template-columns: var(--listColW) 1fr var(--listColW);
-    gap:8px; align-items:center; margin:6px 0;
-  }
-  .item input, .item .btn{ height:36px; }
-  .item .name,.item .url{
-    background:#2b2250;border:1px solid rgba(180,140,255,.35);
-    border-radius:12px;color:#fff;outline:none;
-  }
-  .item .name{width:var(--listColW);padding:8px 10px;font-size:12.5px;text-align:left;}
-  .item .url{width:100%;padding:8px 12px;font-size:13px;}
-  .save-wrap{display:flex;justify-content:center;margin:16px 0 6px}
-
-  /* Mini tarjeta configuración */
-  .cfg-grid{
-    display:grid;
-    grid-template-columns:minmax(80px, var(--cfgLabelW)) minmax(48px, var(--cfgNumberW)) minmax(48px, var(--cfgSuffixW)) minmax(0, 1fr) minmax(120px, var(--saveBtnW));
-    align-items:center;gap:var(--cfgGap);
-  }
-  .cfg-label,.cfg-suffix{color:#d7ccff;font-size:13px;}
-  .cfg-label{padding-left:8px;}
-  #blocksize{width:100%;text-align:center;padding:6px 4px;font-size:13px;}
-  #token{
-    grid-column:1 / 4;min-width:0;width:100%;padding:8px 10px;
-    background:#2b2250;border:1px solid rgba(180,140,255,.35);border-radius:12px;color:#fff;font-size:13px;outline:none;
-  }
-  .mini-inner .cfg-grid .btn{width:100%;justify-content:center;}
-
-  @media (min-width: 768px){
-    .cfg-grid{
-      grid-template-columns:var(--cfgLabelW) var(--cfgNumberW) var(--cfgSuffixW) 1fr var(--saveBtnW);
-      align-items:center;gap:var(--cfgGap);
-    }
-    #token{ grid-column:1 / 5; }
-    .cfg-grid .btn{ min-width:var(--saveBtnW); justify-content:center; }
-  }
-</style>
-</head>
-<body>
-<canvas id="bg"></canvas>
-
-<div class="shell">
-  <div class="logo-wrap">
-    <img class="logo" src="/insomnia-logo.png" alt="Insomnia Logo">
-  </div>
-
-  <div class="card">
-    <div class="card-inner">
-      <h1>PANEL ADMIN</h1>
-
-      <div class="actions-top">
-        <button class="btn btn--sm" id="btnView">Ver lista</button>
-        <button class="btn btn--sm" id="btnRot">Resetear rotación</button>
-        <button class="btn btn--sm" id="btnReset">Borrar lista</button>
-      </div>
-
-      <div class="actions-bottom">
-        <button class="btn btn--main" id="btnAdd">AGREGAR CAJERA</button>
-      </div>
-
-      <div id="list"></div>
-
-      <!-- Oculto al inicio -->
-      <div class="save-wrap" id="saveWrap" style="display:none">
-        <button class="btn btn--thin" id="btnSaveFinal">Guardar</button>
-      </div>
-
-      <p id="msg"></p>
-    </div>
-  </div>
-
-  <div class="card-mini">
-    <div class="mini-inner">
-      <p style="text-align:center;color:#dcd2ff;margin-bottom:10px;">Configuración</p>
-
-      <div class="cfg-grid">
-        <label class="cfg-label">Rotar cada</label>
-        <input id="blocksize" type="number" min="1" max="20" step="1" placeholder="2">
-        <span class="cfg-suffix">clicks</span>
-        <div></div>
-        <button class="btn btn--sm" id="btnSaveBS">Guardar</button>
-
-        <input id="token" type="text" placeholder="tok99-2025">
-        <div></div>
-        <button class="btn btn--sm" id="btnSaveToken">Guardar token</button>
-      </div>
-    </div>
-  </div>
-</div>
-
 <script>
-// Fondo partículas
+// ===== Fondo partículas =====
 const c=document.getElementById("bg"),x=c.getContext("2d");
-let P=[];function rs(){c.width=innerWidth;c.height=innerHeight}addEventListener("resize",rs);rs();
-for(let i=0;i<90;i++)P.push({x:Math.random()*c.width,y:Math.random()*c.height,vx:(Math.random()-.5)*.28,vy:(Math.random()-.5)*.28,r:Math.random()*2+.7});
+let P=[];
+function rs(){c.width=innerWidth;c.height=innerHeight}
+addEventListener("resize",rs);rs();
+for(let i=0;i<90;i++){
+  P.push({x:Math.random()*c.width,y:Math.random()*c.height,vx:(Math.random()-.5)*.28,vy:(Math.random()-.5)*.28,r:Math.random()*2+.7});
+}
 (function anim(){
   const grad=x.createRadialGradient(c.width*0.3,c.height*0.1,0,c.width*0.3,c.height*0.1,Math.max(c.width,c.height));
   const cs=p=>getComputedStyle(document.documentElement).getPropertyValue(p).trim();
   grad.addColorStop(0,cs('--bg1'));grad.addColorStop(1,cs('--bg2'));
   x.fillStyle=grad;x.fillRect(0,0,c.width,c.height);x.fillStyle=cs('--particle');
-  for(const p of P){p.x+=p.vx;p.y+=p.vy;if(p.x<0||p.x>c.width)p.vx*=-1;if(p.y<0||p.y>c.height)p.vy*=-1;x.beginPath();x.arc(p.x,p.y,p.r,0,6.283);x.fill();}
+  for(const p of P){
+    p.x+=p.vx;p.y+=p.vy;
+    if(p.x<0||p.x>c.width)p.vx*=-1;
+    if(p.y<0||p.y>c.height)p.vy*=-1;
+    x.beginPath();x.arc(p.x,p.y,p.r,0,Math.PI*2);x.fill();
+  }
   requestAnimationFrame(anim);
 })();
 
+// ===== Panel =====
 const $=s=>document.querySelector(s);
 const list=$("#list"),msg=$("#msg"),tokenInput=$("#token"),bsInput=$("#blocksize"),saveWrap=$("#saveWrap");
 
@@ -181,7 +30,7 @@ function row(val={name:"",url:""}) {
   const d=document.createElement("div");d.className="item";
   const iName=document.createElement("input");iName.type="text";iName.placeholder="Nombre";iName.className="name";iName.value=val.name||"";
   const iUrl=document.createElement("input");iUrl.type="text";iUrl.placeholder="https://wa.me/...";iUrl.className="url";iUrl.value=val.url||"";
-  const b=document.createElement("button");b.className="btn btn--sm";b.textContent="Borrar";b.onclick=()=>d.remove();
+  const b=document.createElement("button");b.className="btn btn--thin btn--sm";b.textContent="Borrar";b.onclick=()=>d.remove();
   d.append(iName,iUrl,b);list.append(d);
 }
 function values(){
@@ -210,7 +59,9 @@ $("#btnView").onclick=async()=>{
     list.innerHTML="";(j.links||[]).forEach(o=>row(o));
     if((j.links||[]).length===0)row();
     show("Lista cargada");
-    saveWrap.style.display='flex'; // 👈 muestra botón Guardar
+    // 👇 Mostrar botón Guardar al ver la lista
+    const saveWrap=document.getElementById("saveWrap");
+    if(saveWrap) saveWrap.style.display="flex";
   }catch(e){show("Error al cargar",0);}
 };
 
@@ -231,10 +82,11 @@ $("#btnRot").onclick=async()=>{
   }catch(e){show("Error",0);}
 };
 
-// 👇 AGREGAR CAJERA también muestra botón Guardar
+// 👇 Al agregar una cajera también aparece el botón Guardar
 $("#btnAdd").onclick=()=>{
   row();
-  saveWrap.style.display='flex';
+  const saveWrap=document.getElementById("saveWrap");
+  if(saveWrap) saveWrap.style.display="flex";
 };
 
 $("#btnSaveFinal").onclick=async()=>{
@@ -270,5 +122,3 @@ $("#btnSaveBS").onclick=async()=>{
 
 $("#btnStats").onclick=()=>show("📊 Próximamente: Conteo de mensajes y métricas.",1);
 </script>
-</body>
-</html>
