--- a/public/admin.html
+++ b/public/admin.html
@@ -356,7 +356,7 @@
 
         <input id="token" type="text" placeholder="tok99-2025">
         <div></div>
-        <button class="btn btn--thin btn--sm" id="btnSaveToken">Guardar token</button>
+        <button class="btn btn--thin btn--sm" id="btnSaveToken">Activar token</button>
       </div>
     </div>
   </div>
