--- a/public/admin.html
+++ b/public/admin.html
@@ -360,6 +360,28 @@
 </head>
 <body>
 <canvas id="bg"></canvas>
+ <body>
+<canvas id="bg"></canvas>
+
+<div id="loginScreen">
+  <div class="login-box">
+    <h2>Acceso administrador</h2>
+    <p>Ingresá tus credenciales para ver el panel.</p>
+
+    <div class="login-field">
+      <label for="loginUser">Usuario</label>
+      <input id="loginUser" type="text" placeholder="admin">
+    </div>
+
+    <div class="login-field">
+      <label for="loginPass">Contraseña</label>
+      <input id="loginPass" type="password" placeholder="••••••••">
+    </div>
+
+    <button class="btn btn--thin btn--sm" id="loginBtn">Entrar</button>
+    <div id="loginError"></div>
+  </div>
+</div>
 
 <div class="shell">
   <div class="logo-wrap">
