--- a/public/admin.html
+++ b/public/admin.html
@@ -370,7 +370,7 @@
 
     <div class="login-field">
       <label for="loginUser">Usuario</label>
-      <input id="loginUser" type="text" placeholder="admin">
+      <input id="loginUser" type="text">
     </div>
 
     <div class="login-field">
